fix: textual fixes

--- a/views/home.pug
+++ b/views/home.pug
@@ -35,7 +35,7 @@ html(lang="en")
                 h2 Create a Poll
                 .poll__info
                     h3 Fill the fields given below
-                    a.demo__poll(href='/poll/aov4mu26pknj4kalq' target="__blank") View a demo poll
+                    a.demo__poll(href='/poll/4r4411w2kpybdxdi' target="__blank") View a demo poll
             form.poll(action='#')
                 label.poll__label(for='question') Poll Question
                 textarea#name.poll__name(placeholder="What's your favorite anime ?" name='question' required)
@@ -65,11 +65,6 @@ html(lang="en")
                         button#submit.poll__btn Create my poll
             h3(style='text-align: center;margin-top: 8rem;')
                 | A project by Ayush Trivedi
-                br
-                | Inspired by 
-                a(href='https://rapid-poll.vercel.app/' style='color: #3489db;' target='__blank')
-                    | Rapid
-                    | poll
         script(src='/jquery/dist/jquery.min.js')
         script(src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js")
         script(src="/js/bundle.js")
